--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
             <div class="course-section">
                 <h2>课程列表</h2>
                 <div class="course-list">
-                    <div class="course-card" onclick="window.location.href='practice/practice.html?course=kimochi&lesson=Lesson1'">
+                    <div class="course-card" onclick="window.location.href='./practice/practice.html?course=kimochi&lesson=Lesson1'">
                         <h3>気持ち</h3>
                         <p>表达感受的词汇</p>
                     </div>
-                    <div class="course-card" onclick="window.location.href='practice/practice.html?course=gimon&lesson=Lesson1'">
+                    <div class="course-card" onclick="window.location.href='./practice/practice.html?course=gimon&lesson=Lesson1'">
                         <h3>疑問詞</h3>
                         <p>疑问词练习</p>
                     </div>
