文件夹的绑定
调整了课程内容文件夹的绑定

--- a/practice/courses.html
+++ b/practice/courses.html
@@ -154,7 +154,7 @@
     </div>
 
     <script type="module">
-        import { courseData } from '../../js/courseData.js';
+        import { courseData } from '/typingJapanese/js/courseData.js';
 
         // 获取DOM元素
         const modal = document.getElementById('lessonModal');
