课程加载问题

--- a/practice/practice.html
+++ b/practice/practice.html
@@ -18,7 +18,7 @@
                 <button class="icon-button" onclick="window.practiceManager.playSound()">🔊</button>
                 <button class="icon-button" onclick="window.practiceManager.toggleSplitList()">📚</button>
                 <button class="icon-button">☀️</button>
-                <button class="icon-button" onclick="window.location.href='../index.html'" class="back-btn">返回首页</button>
+                <button class="icon-button" onclick="window.location.href='courses.html'">👈</button>
             </div>
         </div>
     </header>
