修复课程显示

--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
             </div>
 
             <div class="course-section">
-                <h2>课程列表</h2>
+                <div class="section-header">
+                    <h2>课程列表</h2>
+                    <a href="practice/courses.html" class="view-all-btn">查看全部课程</a>
+                </div>
                 <div class="course-list">
                     <!-- 课程列表将由 JavaScript 动态生成 -->
                 </div>
