--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
                     <div class="stats-content">
                         <div class="stats-item">
                             <span class="label">学习天数</span>
-                            <span class="value learning-days">0</span>
+                            <div class="learning-days">0</div>
                         </div>
                         <div class="stats-item">
                             <span class="label">已学句子</span>
-                            <span class="value learned-sentences">1</span>
+                            <div class="learned-sentences">0</div>
                         </div>
                         <div class="stats-item" data-action="review">
                             <span class="label">待复习</span>
-                            <span class="value review-items">0</span>
+                            <div class="review-items">0</div>
                         </div>
                         <div class="stats-item" data-action="stats">
                             <span class="label">统计</span>
