--- a/index.html
+++ b/index.html
@@ -126,11 +126,13 @@
                     </div>
                 </div>
             </div>
+
+            <canvas id="statsChart"></canvas>
         </main>
     </div>
 
     <!-- 第三方库 -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js/dist/chart.umd.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     
     <!-- 核心模块 -->
     <script type="module" src="js/common/statsData.js"></script>
