学习趋势图表

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                             <span class="stats-card-title">学习趋势</span>
                         </div>
                         <div class="trend-chart-container">
-                            <canvas id="trendChart"></canvas>
+                            <canvas id="learningTrendChart"></canvas>
                         </div>
                     </div>
                     <!-- 掌握情况卡片 -->
