--- a/review/flashcard.html
+++ b/review/flashcard.html
@@ -16,15 +16,15 @@
             <h2>选择练习模式</h2>
             <a href="../" class="back-btn"><i class="fas fa-times"></i></a>
         </div>
-        <div class="mode-buttons">
-            <button class="mode-btn" data-mode="meaning">
-                <i class="fas fa-arrow-right"></i>
-                <span>中文 → 日文</span>
-            </button>
-            <button class="mode-btn" data-mode="japanese">
-                <i class="fas fa-arrow-right"></i>
-                <span>日文 → 中文</span>
-            </button>
+        <div class="mode-selection">
+            <div class="mode-cn-jp">
+                <span class="arrow">➜</span>
+                中文 → 日文
+            </div>
+            <div class="mode-jp-cn">
+                <span class="arrow">➜</span>
+                日文 → 中文
+            </div>
         </div>
     </div>
 
