--- a/review/flashcard.html
+++ b/review/flashcard.html
@@ -17,11 +17,11 @@
             <a href="../" class="back-btn"><i class="fas fa-times"></i></a>
         </div>
         <div class="mode-selection">
-            <div class="mode-cn-jp">
+            <div class="mode-button mode-cn-jp">
                 <span class="arrow">➜</span>
                 中文 → 日文
             </div>
-            <div class="mode-jp-cn">
+            <div class="mode-button mode-jp-cn">
                 <span class="arrow">➜</span>
                 日文 → 中文
             </div>
