--- a/review/flashcard.html
+++ b/review/flashcard.html
@@ -64,6 +64,6 @@
         </div>
     </div>
 
-    <script src="../js/review/flashcard.js" type="module"></script>
+    <script type="module" src="../js/review/flashcard.js"></script>
 </body>
 </html> 
